--- a/Ex04/index.html
+++ b/Ex04/index.html
@@ -27,5 +27,12 @@
         <tbody>
         </tbody>
     </table>
+    <h3>Relatório</h3>
+    <button onclick="listarSalariosMaiores5000()">Salários acima de R$5000</button>
+    <button onclick="calcularMediaSalarial()">Média Salarial</button>
+    <button onclick="listarCargosUnicos()">Cargos Únicos</button>
+    <button onclick="listarNomesMaiusculos()">Nomes em Maiúsculo</button>
+
+    <div id="relatorio"></div>
     <script src="main.js"></script>
 </body>
